# pypc-utils

./: LICENCE  README.md  pyproject.toml
.github/workflows/: publish-gh-packages.yml  publish-gh-release.yml
docs/source/: conf.py  index.rst  installation.rst  modules.rst  pypc-utils.rst  pypc_utils.rst  usage.rst
scripts/: publish-gh-packages.ps1  publish-gh-packages.sh
src/pypc-utils/: __init__.py
src/pypc_utils/: __init__.py  core.py
tests/: test_api.py
