[project]
name = "pypc-utils"
version = "0.1.0"
description = "My general Python utility functions"
authors = [
    {name = "Philip Cogswell",email = "github@sisyphus21.net"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

# Developement Tool Config
[tool.isort]
    profile = "black"
    
[tool.black]
    line-length = 88