[project]
    name = "pypc-utils"
    version = "0.1.0"
    description = "My general Python utility functions"
    authors = [
        {name = "Philip Cogswell",email = "github@sisyphus21.net"}
    ]
    license = "MIT"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
    ]

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]

[tool.poetry.dependencies]
    python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
    pytest = "^8.4"
    black = "^25.9.0"
    isort = "^6.0.0"
    pylint = "^3.3.0"
    sphinx = "^8.2.0"
    myst-parser = "^4.0.1"
    sphinx-rtd-theme = "^3.0.2"
    sphinx-autodoc-typehints = "^3.2.0"

[[tool.poetry.packages]]
    include = "pypc_utils"
    from = "src"

# Developement Tool Config
[tool.isort]
    profile = "black"
    
[tool.black]
    line-length = 88